<resources>
    <string name="app_name">GoShop</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="goshop">GoShop</string>
    <string name="new_address_for_shopping">new address for shopping</string>
    <string name="first_onboarding_screen_title">Easily Shop \nAnywhere, Anytime</string>
    <string name="first_onboarding_screen_description">You can easily find the products you want\nYou can enjoy shopping</string>
    <string name="onboarding_button_text">Next</string>
    <string name="onboarding_iv_description">onboarding iv description</string>
    <string name="onboarding_second_screen_title">Order Easily</string>
    <string name="onboarding_second_screen_description">Order easily with one click \nand continue your shopping from\n where you left off.</string>
    <string name="onboarding_third_screen_title">Fast Delivery</string>
    <string name="onboarding_third_screen_description">Enjoy quality service with\nfast and safe delivery!!!</string>
    <string name="onboarding_third_screen_button_text">Let\'s Shop</string>
    <string name="home">Home</string>
    <string name="favorite">Favorite</string>
    <string name="cart">Cart</string>
    <string name="profile">Profile</string>
    <string name="category_name">Category Name</string>
    <string name="categories">Categories</string>
    <string name="name_surname">Name/Surname</string>
    <string name="tu_e_aras">Tuğçe Aras</string>
    <string name="phone_number">Phone Number</string>
    <string name="_05555555555">05555555555</string>
    <string name="email">Email</string>
    <string name="aras_tugcee_gmail_com">aras.tugcee@gmail.com</string>
    <string name="adderss">Address</string>
    <string name="price">Price</string>
    <string name="product_title">Product Title</string>
    <string name="detail_image_button">Detail image button</string>
    <string name="product_description">Product Description</string>
    <string name="add_to_cart">Add To Cart</string>
    <string name="_1">1</string>
    <string name="total_amount">Total:</string>
    <string name="buy">Buy</string>
    <string name="payment">Payment</string>
    <string name="card_information">Card Information</string>
    <string name="card_name">Card Name</string>
    <string name="card_number">Card Number</string>
    <string name="month">Month</string>
    <string name="year">Year</string>
    <string name="address">Address</string>
    <string name="pay">Pay</string>
    <string name="back_home">Back Home</string>
    <string name="cvv">CVV</string>
    <string name="error_card_name">Please enter your card name!</string>
    <string name="error_card_number">Please enter your card number!</string>
    <string name="error_month">Please select a month!</string>
    <string name="error_year">Please select a year!</string>
    <string name="error_cvv">Please enter your card CVV!</string>
    <string name="error_address">Please enter your address!</string>
    <string name="check_number_length">You entered incomplete!</string>
    <string name="favorites">Favorites</string>
    <string name="alertdialog_set_title">Delete Product</string>
    <string name="alertdialog_set_message">Are you sure you want to delete this product?</string>
    <string name="alertdialog_positive_button">Yes</string>
    <string name="alertdialog_negative_button">Cancel</string>
    <string name="sign_out">Sign out</string>
    <string name="click_cart_button_message">Successfully added to cart!</string>
    <string name="success_fav_button_message">Successfully added to favorites!</string>
    <string name="already_added_fav_button">This product already added to favorites!</string>
    <string name="somethings_wrong">Something\'s wrong!</string>
    <string name="delete_from_favorites_message">Product deleted from favorites!</string>
    <string name="cart_empty_message">Your cart is empty!</string>
</resources>