<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.profile.ProfileScreen">

    <include
        android:id="@+id/profileToolbar"
        layout="@layout/toolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/profileCardView"
        />

    <TextView
        android:id="@+id/toolbar_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/profile"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/profileToolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/profileCardView"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginTop="52dp"
        app:cardBackgroundColor="@color/light_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:cardCornerRadius="80dp"
        app:layout_constraintTop_toBottomOf="@+id/profileToolbar">

        <ImageView
            android:id="@+id/profileImageView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/profile_screen_image"
            android:scaleType="centerCrop"
            />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/profileNameSurnameTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/name_surname"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:drawablePadding="4dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="12dp"
        android:layout_marginTop="72dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profileCardView"
        app:drawableLeftCompat="@drawable/info_icon"
        />

    <TextView
        android:id="@+id/profileNameSurnameSubtitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/tu_e_aras"
        android:textColor="@color/dim_gray"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_marginStart="44dp"
        android:layout_marginEnd="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profileNameSurnameTitle" />

    <TextView
        android:id="@+id/profilePhoneTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="12dp"
        android:drawablePadding="4dp"
        android:text="@string/phone_number"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profileNameSurnameSubtitle"
        app:drawableLeftCompat="@drawable/phone_icon" />

    <TextView
        android:id="@+id/profilePhoneSubtitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/_05555555555"
        android:textColor="@color/dim_gray"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_marginStart="44dp"
        android:layout_marginEnd="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profilePhoneTitle" />

    <TextView
        android:id="@+id/profileEmailTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        android:drawablePadding="4dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="12dp"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profilePhoneSubtitle"
        app:drawableLeftCompat="@drawable/email_icon" />

    <TextView
        android:id="@+id/profileEmailSubtitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/aras_tugcee_gmail_com"
        android:textColor="@color/dim_gray"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_marginStart="44dp"
        android:layout_marginEnd="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profileEmailTitle" />

    <Button
        android:id="@+id/signOutButton"
        android:layout_width="132dp"
        android:layout_height="48dp"
        android:background="@drawable/button_shape"
        android:text="@string/sign_out"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profileEmailSubtitle"
        android:layout_marginTop="44dp"
        />
</androidx.constraintlayout.widget.ConstraintLayout>