<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/background_color"
    tools:context=".ui.payment.PaymentScreen">

    <include
        android:id="@+id/paymentToolbar"
        layout="@layout/toolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/paymentToolbarTitle"
        />

    <TextView
        android:id="@+id/paymentToolbarTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/payment"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/paymentToolbar"
        android:layout_marginStart="52dp"
        android:gravity="center_vertical"
        />

    <TextView
        android:id="@+id/paymentCardTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/paymentToolbar"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="18dp"
        android:layout_marginEnd="18dp"
        android:layout_marginTop="28dp"
        android:text="@string/card_information"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textColor="@color/black"
        />

    <androidx.cardview.widget.CardView
        android:id="@+id/paymentCardNameCardView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/paymentCardTitle" 
        android:layout_marginTop="24dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:cardBackgroundColor="@color/item_background_color"
        app:cardCornerRadius="12dp"
        app:contentPadding="2dp"
        app:cardElevation="5dp"
        >
    
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/paymentCardNameLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/card_name"
            android:textColorHint="@color/subtitle_color"
            app:boxBackgroundColor="@color/item_background_color"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            app:errorTextColor="@color/red"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/cardNameEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:textColor="@color/black"
                />

        </com.google.android.material.textfield.TextInputLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/paymentCardNumberCardView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/paymentCardNameCardView"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:cardBackgroundColor="@color/item_background_color"
        app:cardCornerRadius="12dp"
        android:layout_marginTop="12dp"
        app:contentPadding="2dp"
        app:cardElevation="5dp"
        >

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/paymentCardNumberLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/card_number"
            android:textColorHint="@color/subtitle_color"
            app:boxBackgroundColor="@color/item_background_color"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            app:errorTextColor="@color/red"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/cardNumberEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:digits="0123456789-"
                android:inputType="number"
                android:singleLine="true"
                android:textColor="@color/black"
                android:maxLength="16"
                tools:ignore="SpeakableTextPresentCheck" />

        </com.google.android.material.textfield.TextInputLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/paymentMonthCardView"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        app:cardCornerRadius="12dp"
        app:contentPadding="2dp"
        app:cardElevation="5dp"
        android:focusableInTouchMode="true"
        app:cardBackgroundColor="@color/item_background_color"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/paymentCardNumberCardView"
        >

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/paymentMonthLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/month"
            android:textColorHint="@color/subtitle_color"
            app:boxBackgroundColor="@color/item_background_color"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            app:errorTextColor="@color/red"
            app:endIconTint="@color/black"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            >

            <AutoCompleteTextView
                android:id="@+id/monthAutoComplete"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:dropDownHeight="wrap_content"
                android:inputType="none"
                android:textColor="@color/black"
                tools:ignore="LabelFor" />

        </com.google.android.material.textfield.TextInputLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/paymentYearCardView"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        app:cardCornerRadius="12dp"
        app:contentPadding="2dp"
        android:layout_marginTop="12dp"
        android:layout_marginStart="5dp"
        app:cardElevation="5dp"
        android:focusableInTouchMode="true"
        app:cardBackgroundColor="@color/item_background_color"
        app:layout_constraintStart_toEndOf="@+id/paymentMonthCardView"
        app:layout_constraintTop_toBottomOf="@+id/paymentCardNumberCardView">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/paymentYearLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColorHint="@color/subtitle_color"
            app:boxBackgroundColor="@color/item_background_color"
            app:boxStrokeWidth="0dp"
            android:hint="@string/year"
            app:boxStrokeWidthFocused="0dp"
            app:errorTextColor="@color/red"
            app:endIconTint="@color/black"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            >

            <AutoCompleteTextView
                android:id="@+id/yearAutoComplete"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:dropDownHeight="wrap_content"
                android:textColor="@color/black"
                android:inputType="none"
                tools:ignore="LabelFor" />

        </com.google.android.material.textfield.TextInputLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/paymentCvvCardView"
        android:layout_width="0dp"
        android:layout_height="63dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="12dp"
        app:cardBackgroundColor="@color/item_background_color"
        app:cardCornerRadius="12dp"
        app:cardElevation="5dp"
        app:contentPadding="2dp"
        app:layout_constraintEnd_toEndOf="@+id/paymentCardNumberCardView"
        app:layout_constraintStart_toEndOf="@+id/paymentYearCardView"
        app:layout_constraintTop_toBottomOf="@+id/paymentCardNumberCardView">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/paymentCvvLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/cvv"
            android:gravity="center"
            app:boxBackgroundColor="@color/item_background_color"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            app:errorTextColor="@color/red"
            android:textColorHint="@color/subtitle_color">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/paymentCvvEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:digits="0123456789- "
                android:inputType="number"
                android:maxLength="3"
                android:textColor="@color/black"
                android:singleLine="true" />

        </com.google.android.material.textfield.TextInputLayout>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/paymentAddressTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginEnd="18dp"
        android:layout_marginTop="24dp"
        android:text="@string/address"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/paymentMonthCardView" />

    <androidx.cardview.widget.CardView
        android:id="@+id/paymentAddressCardView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        app:cardBackgroundColor="@color/item_background_color"
        app:cardCornerRadius="12dp"
        app:cardElevation="5dp"
        app:contentPadding="2dp"
        app:layout_constraintBottom_toTopOf="@+id/payButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/paymentAddressTitle">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/paymentAddressLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:boxBackgroundColor="@color/item_background_color"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            app:errorTextColor="@color/red"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/paymentAddressEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                tools:ignore="SpeakableTextPresentCheck" />

        </com.google.android.material.textfield.TextInputLayout>
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/payButton"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:text="@string/pay"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:layout_marginStart="18dp"
        android:layout_marginEnd="18dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="18dp"
        android:background="@drawable/button_shape"
        />

</androidx.constraintlayout.widget.ConstraintLayout>